# solid-refactoring-kata

ocp/: CMakeLists.txt  main.cpp
ocp/command_chain_1/: command.h  main.cpp  parser.h
ocp/command_chain_2/: command.h  parser.h
ocp/command_map_1/: command.h  main.cpp  parser.h
